@@ -1,3 +1,8 @@
+2007-04-15 Braden McDaniel  <braden@endoframe.com>
+
+	* src/openvrml-player/player.cpp
+	(main(int, char *[])): Set the request_channel encoding to none.
+
 2007-04-08 Braden McDaniel  <braden@endoframe.com>
 
 	* src/openvrml-player/player.cpp
